Options page fix, reset button functionality
+ scrollbar auto to hide until required
+ checks to make sure customElement isn't defined before calling define
+ fixed firefox options window & improved styling
+ reset button functionality
+ input enter event

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -48,6 +48,6 @@ body {
     flex-wrap: nowrap;
     color: var(--dark);
     width: 80%;
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 }
